--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -157,7 +157,7 @@
     "ar": "Arabic",
     "ckb": "Central Kurdish",
     "en-US": "English (United States)",
-    "fr-CA": "French (Canada)",
+    "fr": "French",
     "ja-JP": "Japanese",
     "kmr": "Northern Kurdish"
   },
