Updated credits screen, organize translators by language instead of user

--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -158,7 +158,7 @@
     "ckb": "Central Kurdish",
     "en-US": "English (United States)",
     "fr": "French",
-    "ja-JP": "Japanese",
+    "ja": "Japanese",
     "kmr": "Northern Kurdish"
   },
   "scrollable": {
