added russian language (maybe not perfect translation)

--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -157,6 +157,7 @@
     "ar": "Arabic",
     "ckb": "Central Kurdish",
     "en-US": "English (United States)",
+    "ru": "Russian",
     "fr": "French",
     "ja": "Japanese",
     "kmr": "Northern Kurdish"
