Fix notice not being localized

--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -44,6 +44,7 @@
     }
   },
   "footer": {
+    "notice": "Project Lodestone is NOT an official Minecraft product.",
     "buttons": {
       "openCredits": {
         "text": "Credits",
