--- a/src/Assets/L10N/fr.json
+++ b/src/Assets/L10N/fr.json
@@ -37,14 +37,7 @@
       "title": "Site Web"
     }
   },
-  "dialog": {
-    "close": {
-      "ariaLabel": "Fermer le dialogue",
-      "title": "Fermer le dialogue"
-    }
-  },
   "footer": {
-    "notice": "Project Lodestone n'est PAS un produit Minecraft officiel.",
     "buttons": {
       "openCredits": {
         "text": "Crédits",
@@ -58,7 +51,8 @@
         "text": "Équipe",
         "title": "Voir l'équipe"
       }
-    }
+    },
+    "notice": "Project Lodestone n'est PAS un produit Minecraft officiel."
   },
   "home": {
     "buttons": {
@@ -113,30 +107,30 @@
       },
       "worksEverywhere": {
         "alt": "Icône de carte",
-        "description": "Il fonctionne comme une application web, ce qui signifie que tout appareil doté d'un navigateur moderne et d'une connexion Internet peut utiliser Project Lodestone. (ou même hors ligne, grâce au PWA.)",
+        "description": "Il fonctionne comme une application web, ce qui signifie que tout appareil doté d'un navigateur moderne et d'une connexion Internet peut utiliser Project Lodestone (ou même hors ligne, grâce au PWA)",
         "title": "Fonctionne « partout »"
       }
     },
     "supportedEditions": {
       "3DS": {
         "alt": "Icône de D-Pad",
-        "title": "New Nintendo 3DS Edition"
+        "title": "Édition New Nintendo 3DS"
       },
       "BE": {
         "alt": "Icône de téléphone",
-        "title": "Bedrock/Pocket Edition"
+        "title": "Édition Bedrock/Pocket"
       },
       "JE": {
         "alt": "Icône d'ordinateur de bureau",
-        "title": "Java Edition"
+        "title": "Édition Java"
       },
       "LCE": {
         "alt": "Icône de manette",
-        "title": "Legacy Console Edition"
+        "title": "Édition console Legacy"
       },
       "PI": {
         "alt": "Logo Raspberry Pi",
-        "title": "Raspberry Pi Edition"
+        "title": "Édition Raspberry Pi"
       },
       "header": "Éditions supportées"
     }
@@ -160,19 +154,8 @@
     "en-US": "Anglais (États-Unis)",
     "fr": "Français",
     "ja-JP": "Japonais",
-    "kmr": "Kurde du Nord"
-  },
-  "scrollable": {
-    "arrows": {
-      "left": {
-        "ariaLabel": "Défiler à gauche",
-        "title": "Défiler à gauche"
-      },
-      "right": {
-        "ariaLabel": "Défiler à droite",
-        "title": "Défiler à droite"
-      }
-    }
+    "kmr": "Kurde du Nord",
+    "ru": "Russe"
   },
   "topbar": {
     "buttons": {
@@ -201,24 +184,15 @@
         "text": "Lancer Project Lodestone",
         "title": "Lancer Project Lodestone (Lodestone est actuellement en développement et n'a pas encore été publié)"
       }
-    },
-    "expander": {
-      "ariaLabel": {
-        "closed": "Ouvrir le menu",
-        "opened": "Fermer le menu"
-      },
-      "title": {
-        "closed": "Ouvrir le menu",
-        "opened": "Fermer le menu"
+    }
+  },
+  "LodestoneUI": {
+    "Topbar": {
+      "homeButton": {
+        "logo": {
+          "alt": "Logo Lodestone (Petit L)"
+        }
       }
-    },
-    "homeButton": {
-      "ariaLabel": "Bouton d'accueil",
-      "logo": {
-        "alt": "Logo de Lodestone (Petit L)"
-      },
-      "name": "Project Lodestone",
-      "title": "Aller à l'accueil"
     }
   }
 }
