--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -157,6 +157,7 @@
     "fr": "Français",
     "ja": "日本語",
     "kmr": "kurdiya bakur"
+    "nl": "Nederlands",
   },
   "topbar": {
     "buttons": {
