fix because I couldn't check the pull (busy with irl stuff)

--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -156,8 +156,8 @@
     "ru": "Русский",
     "fr": "Français",
     "ja": "日本語",
-    "kmr": "kurdiya bakur"
-    "nl": "Nederlands",
+    "kmr": "kurdiya bakur",
+    "nl": "Nederlands"
   },
   "topbar": {
     "buttons": {
