Add Simplified Chinese translation.

--- a/src/Assets/L10N/en-us.json
+++ b/src/Assets/L10N/en-us.json
@@ -157,7 +157,8 @@
     "fr": "Français",
     "ja": "日本語",
     "kmr": "kurdiya bakur",
-    "nl": "Nederlands"
+    "nl": "Nederlands",
+    "zh-CN": "中文（简体）"
   },
   "topbar": {
     "buttons": {
