--- a/src/Assets/L10N/ja.json
+++ b/src/Assets/L10N/ja.json
@@ -162,7 +162,8 @@
     "ru": "Русский",
     "fr": "Français",
     "ja": "日本語",
-    "kmr": "kurdiya bakur"
+    "kmr": "kurdiya bakur",
+    "zh-CN": "中文（简体）"
   },
   "scrollable": {
     "arrows": {
