--- a/src/Assets/L10N/nl.json
+++ b/src/Assets/L10N/nl.json
@@ -156,7 +156,8 @@
       "ru": "Русский",
       "fr": "Français",
       "ja": "日本語",
-      "kmr": "kurdiya bakur"
+      "kmr": "kurdiya bakur",
+      "zh-CN": "中文（简体）"
     },
     "topbar": {
       "buttons": {
