--- a/src/Assets/L10N/ja.json
+++ b/src/Assets/L10N/ja.json
@@ -154,16 +154,7 @@
     "title": "言語"
   },
   "languages": {
-    "browserLanguage": "ブラウザの言語を使用",
-    "notice": "Do not translate this string nor any of the strings below.",
-    "ar": "عربي",
-    "ckb": "ناوەندی کوردی",
-    "en-US": "English (United States)",
-    "ru": "Русский",
-    "fr": "Français",
-    "ja": "日本語",
-    "kmr": "kurdiya bakur",
-    "zh-CN": "中文（简体）"
+    "browserLanguage": "ブラウザの言語を使用"
   },
   "scrollable": {
     "arrows": {
